update for code smells (#4697)
Signed-off-by: vlo-rte <valerie.longa@rte-france.com>